--- a/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/MvcMovie/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MvcMovie</a>
+                <a asp-area="" asp-controller="Movies" asp-action="" class="navbar-brand btn btn-success btn-lg" style="color: white">MvcMovie</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-success btn-lg" style="color: white">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About" class="btn btn-success btn-lg" style="color: white">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact" class="btn btn-success btn-lg" style="color: white">Contact</a></li>
                 </ul>
             </div>
         </div>
