--- a/MvcMovie/Views/Shared/_Layout.cshtml
+++ b/MvcMovie/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-success btn-lg" style="color: white">Home</a></li>
+                    <li><a asp-area="" asp-controller="Movies" asp-action="Index" class="btn btn-success btn-lg" style="color: white">Movies</a></li>
+                    <li><a asp-area="" asp-controller="Reviews" asp-action="Index" class="btn btn-success btn-lg" style="color: white">Reviews</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About" class="btn btn-success btn-lg" style="color: white">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact" class="btn btn-success btn-lg" style="color: white">Contact</a></li>
                 </ul>
